--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.FireBaseApp"
         tools:targetApi="31">
         <activity
+            android:name=".ChatActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".RegisterBusinessActivity"
             android:exported="false">
             <meta-data
@@ -49,11 +56,8 @@
         </activity>
         <activity
             android:name=".ui.settings.SettingsFragment"
-            android:theme="@style/PreferencesTheme"
-            android:exported="false">
-        </activity>
-
-
+            android:exported="false"
+            android:theme="@style/PreferencesTheme"></activity>
     </application>
 
 </manifest>
