--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.FireBaseApp"
         tools:targetApi="31">
         <activity
+            android:name=".UserProfileSettingsActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ChatActivity"
             android:exported="false">
             <meta-data
@@ -57,7 +64,7 @@
         <activity
             android:name=".ui.settings.SettingsFragment"
             android:exported="false"
-            android:theme="@style/PreferencesTheme"></activity>
+            android:theme="@style/PreferencesTheme" />
     </application>
 
 </manifest>
